Add: vocabulary learning cron jobs - style-learner every 30min, research twice daily

--- a/crontab.conf
+++ b/crontab.conf
@@ -58,7 +58,17 @@ PYTHON=/usr/bin/python3
 # ============================================
 
 # Whale tracking (uncomment to enable)
-# */30 * * * * cd $BOT_HOME && $PYTHON skills/whale-tracker/main.py >> $LOG_DIR/whales.log 2>&1
+# */30 * * * * cd $BOT_HOME && $PYTHON skills/whale-tracker/research.py >> $LOG_DIR/whales.log 2>&1
 
 # Airdrop scanner (uncomment to enable)
-# 0 */4 * * * cd $BOT_HOME && $PYTHON skills/airdrop-scanner/main.py >> $LOG_DIR/airdrops.log 2>&1
+# 0 */4 * * * cd $BOT_HOME && $PYTHON skills/airdrop-scanner/research.py >> $LOG_DIR/airdrops.log 2>&1
+
+# ============================================
+# STYLE & RESEARCH LEARNING
+# ============================================
+
+# Style learning - every 30 minutes
+*/30 * * * * cd $BOT_HOME && $PYTHON skills/style-learner/scripts/research.py learn >> $LOG_DIR/style-learn.log 2>&1
+
+# Research digest for vocabulary - twice daily
+0 10,22 * * * cd $BOT_HOME && $PYTHON skills/research/scripts/research.py --query "starknet defi l2 zk rollup vocabulary trends" >> $LOG_DIR/vocab-research.log 2>&1
