Evolution: P2+P3 complete - retry logic, ct-intelligence skill, all audit items resolved

--- a/skills/editor/references/config.json
+++ b/skills/editor/references/config.json
@@ -69,6 +69,14 @@
       "aggression": 30,
       "meme_density": 90,
       "myth_layer": 20
+    },
+    "sefirot": {
+      "fragmentation": 45,
+      "irony": 50,
+      "aggression": 15,
+      "meme_density": 25,
+      "myth_layer": 40,
+      "description": "Minimal, cryptic, confident, supportive. Strategic emoji. Bimodal length. Starknet/L2 ecosystem, philosophy. Low aggression for ecosystem engagement."
     }
   },
   "safety": {
