feat: Set up skills development environment with cron and multi-agent collaboration
- Add DEVELOPMENT_RESEARCH.md: Research findings for DEX APIs (Ekubo, Jediswap, AVNU),
  price feeds (CoinGecko, Chainlink, Pyth), search APIs (Brave, Tavily), and
  multi-agent frameworks (LangGraph, CrewAI, AutoGen)

- Add MULTI_AGENT_DESIGN.md: Architecture for agent collaboration including
  session patterns, communication flows, and workflow examples

- Add dev-scripts/: Development workflow scripts
  - run-skill.sh: Run single skill test
  - test-all.sh: Test all skills (parallel or sequential)
  - analyze.sh: Run skill evolution analysis

- Update crontab.conf: Add hourly skill evolution analysis job that
  runs analyze.py and sends alerts to main session on critical issues

--- a/crontab.conf
+++ b/crontab.conf
@@ -30,6 +30,11 @@ PYTHON=/usr/bin/python3
 # MEDIUM FREQUENCY (1-6 hours)
 # ============================================
 
+# Skill evolution analysis - every hour
+# Runs skill evolution analysis, checks for issues,
+# logs results, and sends alerts if critical issues found
+0 * * * * cd $BOT_HOME && $PYTHON skills/skill-evolver/scripts/analyze.py --output $BOT_HOME/memory/evolution.md --alert-session agent:main:main >> $LOG_DIR/evolution.log 2>&1
+
 # Queue cleanup - every 6 hours
 # Removes stale tasks, frees memory
 0 */6 * * * cd $BOT_HOME && $PYTHON unified_orchestrator.py --job queue-cleanup >> $LOG_DIR/queue.log 2>&1
