chore: Clean up critical skills
- Move tmux to available_skills/ (score: 54)
- Move local-places to available_skills/ (score: 48)
- Update SKILLS_INDEX.md

--- a/crontab.conf
+++ b/crontab.conf
@@ -80,4 +80,4 @@ PYTHON=/usr/bin/python3
 # Daily report (5:30 AM)
 30 5 * * * /home/wner/clawd/scripts/daily_report.sh >> /home/wner/clawd/logs/cron_daily_report.log 2>&1
 # Starknet Whale Tracker - Simplified (runs every 15 min)
-*/15 * * * * cd /home/wner/clawd/skills/_integrations/starknet-whale-tracker && python3 scripts/simple_check.py >> /home/wner/clawd/logs/whale_tracker.log 2>&1
+*/15 * * * * cd /home/wner/clawd/skills/_integrations/starknet-whale-tracker && PYTHONPATH=/home/wner/.local/lib/python3.12/site-packages /usr/bin/python3.12 scripts/simple_check.py >> /home/wner/clawd/logs/whale_tracker.log 2>&1
