feat: Privacy voting contract + 5h dev agent
- Cairo contract: privacy_voting with MEV protection
- Commit-reveal voting, encrypted votes, slashing
- Cron: Cairo dev agent runs 5 hours nightly
- Research: memory/crypto_research.md

--- a/crontab.conf
+++ b/crontab.conf
@@ -79,5 +79,22 @@ PYTHON=/usr/bin/python3
 0 10,22 * * * cd $BOT_HOME && $PYTHON skills/research/scripts/research.py --query "starknet defi l2 zk rollup vocabulary trends" >> $LOG_DIR/vocab-research.log 2>&1
 # Daily report (5:30 AM)
 30 5 * * * /home/wner/clawd/scripts/daily_report.sh >> /home/wner/clawd/logs/cron_daily_report.log 2>&1
+
 # Starknet Whale Tracker - Simplified (runs every 15 min)
 */15 * * * * cd /home/wner/clawd/skills/_integrations/starknet-whale-tracker && PYTHONPATH=/home/wner/.local/lib/python3.12/site-packages /usr/bin/python3.12 scripts/simple_check.py >> /home/wner/clawd/logs/whale_tracker.log 2>&1
+
+# ============================================
+# RESEARCH & DEVELOPMENT AGENTS
+# ============================================
+
+# Crypto research agent - runs daily at 2 AM
+0 2 * * * cd $BOT_HOME && $PYTHON skills/_system/claude-proxy/scripts/main.py --task "Research: What gaps exist in crypto that need solving? Focus on: 1) Privacy solutions beyond zk-proofs, 2) New DeFi primitives, 3) Chain abstraction, 4) MEV protection. Search web, summarize 5 opportunities for Starknet. Output to memory/crypto_research.md" --autonomous --hours 1 >> $LOG_DIR/crypto_research.log 2>&1
+
+# Cairo development agent - runs daily at 3 AM (5 hours)
+0 3 * * * cd $BOT_HOME && $PYTHON skills/_system/claude-proxy/scripts/main.py --task "Develop Cairo code for Starknet: 1) Extend the privacy_voting contract with new features, 2) Add comprehensive tests, 3) Create a second smart contract pattern, 4) Document everything. Focus on: account abstraction, ERC standards, or DeFi primitive. Output to memory/cairo_dev.md" --autonomous --hours 5 >> $LOG_DIR/cairo_dev.log 2>&1
+
+# System daily report - runs daily at 6 AM
+0 6 * * * cd $BOT_HOME && $PYTHON unified_orchestrator.py --job health-check >> $LOG_DIR/system_daily.log 2>&1
+
+# Starknet ecosystem research - weekly (Monday 2 AM)
+0 2 * * 1 cd $BOT_HOME && $PYTHON skills/research/scripts/research.py --query "Starknet ecosystem developments 2026 new protocols DeFi privacy tools" >> $LOG_DIR/starknet_research.log 2>&1
